appended Clicked! and added colors by id on each button

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 	<body>	
 		<div class="center">
-			<ul id="navBar">
-				<li class="one"><a href="index.html">Home</a></li>
-				<li class="two"><a href="#">About</a></li>
-				<li class="three"><a href="#">Portfolio</a></li>
-				<li class="four"><a href="#">Resume</a></li>
+			<ul>
+				<li id="one" class="navBar"><a href="#">Home</a></li>
+				<li id="two" class="navBar"><a href="#">About</a></li>
+				<li id="three" class="navBar"><a href="#">Portfolio</a></li>
+				<li id="four" class="navBar"><a href="#">Resume</a></li>
 			</ul>
-			<h1>Karen Langner</h1>
-			<p>Front End Web Developer</p>
+			<h1 id="header">Karen Langner</h1>
+			<h2>Front End Web Developer</h2>
 		</div>
 
 	<script type='text/javascript' src='scripts.js'></script>
